--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -1,13 +1,13 @@
 module(name = "dupman")
 
-bazel_dep(name = "rules_go", version = "0.44.0", repo_name = "io_bazel_rules_go")
+bazel_dep(name = "rules_go", version = "0.44.0")
 bazel_dep(name = "gazelle", version = "0.35.0")
 bazel_dep(name = "rules_jvm_external", version = "5.3")
 bazel_dep(name = "rules_oci", version = "1.5.1")
 bazel_dep(name = "rules_pkg", version = "0.7.0")
 
 # Setup Go.
-go_sdk = use_extension("@io_bazel_rules_go//go:extensions.bzl", "go_sdk")
+go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
 go_sdk.download(version = "1.19")
 
 go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
