--- a/packages/common/vault/BUILD.bazel
+++ b/packages/common/vault/BUILD.bazel
@@ -11,6 +11,7 @@ go_library(
     visibility = ["//visibility:public"],
     deps = [
         "//packages/common/otel",
+        "//packages/domain/errors",
         "@com_github_google_uuid//:uuid",
         "@com_github_hashicorp_vault_api//:api",
         "@com_github_hashicorp_vault_api_auth_approle//:approle",
